# bitfield

./: CHANGELOG.md  README.md  bitfield.cabal
.github/workflows/: ci.yml
src/Data/: Bitfield.hs  Width.hs
src/Data/Bitfield/: Internal.hs
test/: BitfieldSpec.hs
