cabal-version:       2.4
name:                bitfield
version:             0.0.0.0
synopsis:            Easy to use haskell bitfields
description:         Easy to use haskell bitfields
license:             MIT
license-file:        LICENSE
author:              Jannis
maintainer:          Jannis <overesch.jannis@gmail.com>
copyright:           2022 Jannis
category:            Data
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC ==9.4.2

common common-options
  build-depends:       base >= 4 && < 5
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields
                       -Wmissing-deriving-strategies
  default-language:    Haskell2010
library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     Data.Bitfield
                     , Data.Bitfield.Internal
                     , Data.Width
test-suite bitfield-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-tool-depends:  sydtest-discover:sydtest-discover
  build-depends:       bitfield
                     , sydtest
                     , validity
                     , genvalidity
                     , genvalidity-sydtest
                     , QuickCheck
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
  other-modules:       BitfieldSpec
